RESOLVED FIXED 255266
REGRESSION(r262728): elementsFromPoint misses elements if they are in different paint passes
https://bugs.webkit.org/show_bug.cgi?id=255266
Summary REGRESSION(r262728): elementsFromPoint misses elements if they are in differe...
Matt Woodrow
Reported 2023-04-10 18:42:15 PDT
https://commits.webkit.org/262728@main changed the behaviour such that we only write to the HitTestResult if we hit a layer in that paint behaviour pass. For elementsFromPoint we don't record a single hit layer, and we to append to the HitTestResult for each element that we intersected. This change always appends to the final HitTestResult if resultIsElementList(). This doesn't fix the problem that these appends are done in normal paint order, not 3d depth sorted order (if transform-style is preserve-3d), which is bug 255265.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-04-10 18:42:28 PDT
Matt Woodrow
Comment 2 2023-04-12 14:19:15 PDT
EWS
Comment 3 2023-04-12 18:17:51 PDT
Committed 262897@main (21a87c580718): <https://commits.webkit.org/262897@main> Reviewed commits have been landed. Closing PR #12598 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.